--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "todo-api",
   "version": "1.0.0",
   "description": "todo api based on mongodb",
-  "main": "mongodb-connect.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Saurabh Jain",
   "license": "ISC",
   "dependencies": {
-    "mongodb": "^3.1.1"
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "mongodb": "^3.1.1",
+    "mongoose": "^5.2.5"
   }
 }
